--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,12 @@
   </p>
   <![endif]-->
   <narr-app></narr-app>
+  <!--<narr-app style="display: none;">loading...</narr-app>-->
+  <!--<script>
+    window.addEventListener('load', function() {
+      document.querySelector('narr-app').style.display = 'block';
+    });
+  </script>-->
 </body>
 
 </html>
