--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Narr's website">
+  <title>NARR</title>
+  <!--<base href="<%= webpackConfig.metadata.baseUrl %>">-->
   <link href="<%= require('file?name=asset/img/ic/[name].[ext]?[hash]' +
     '!asset/img/icon/ic.favicon.ico') %>" rel="shortcut icon" type="image/x-icon">
-  <title>NARR</title>
 
   <% if (webpackConfig.metadata.ga === true) { %>
     <script>
