--- a/src/index.html
+++ b/src/index.html
@@ -15,25 +15,27 @@
   <!--<base href="<%= webpackConfig.metadata.baseUrl %>">-->
   <link href="<%= require('file?name=asset/img/ic/[name].[ext]?[hash]' +
     '!asset/img/icon/ic.favicon.ico') %>" rel="shortcut icon" type="image/x-icon">
+  <link href="<%= require('file?name=[name].[ext]?[hash]!../config/my-loader!./manifest.json') %>"
+    rel="manifest">
 
-  <% if (webpackConfig.metadata.ga === true) { %>
-    <script>
-      (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-          (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-          m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-      })(window, document, 'script',
-        'https://www.google-analytics.com/analytics.js', 'ga');
-      ga('create', 'UA-69400538-6', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <% } %>
+  <% if (webpackConfig.metadata.github === true) { %>
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script',
+      'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-69400538-6', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <% } %>
 </head>
 
 <body>
