--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,18 @@
     '!asset/img/icon/ic.favicon.ico') %>" rel="shortcut icon" type="image/x-icon">
   <link href="<%= require('file?name=[name].[ext]?[hash]!../config/my-loader!./manifest.json') %>"
     rel="manifest">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@nardgu">
+  <meta name="twitter:title" content="Narr's Website">
+  <meta name="twitter:description" content="This is Narr's personal website">
+  <meta name="twitter:image" content="https://narr.github.io/narr<%= require('' +
+    './asset/img/ss.intro.jpg') %>">
+  <meta property="og:url" content="https://narr.github.io/narr/">
+  <meta property="og:title" content="Narr's Website">
+  <meta property="og:description" content="This is Narr's personal website">
+  <meta property="og:site_name" content="Narr">
+  <meta property="og:image" content="https://narr.github.io/narr<%= require('' +
+    './asset/img/ss.intro.jpg') %>">
 
   <% if (webpackConfig.metadata.github === true) { %>
   <script>
